# SMSPit

./: .editorconfig  .editorconfig-checker.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  checklist.md  docker-compose.yml  package-lock.json  package.json
ai-service/: .dockerignore  .env.example  Dockerfile  README.md  requirements.txt
auth-service/: .dockerignore  .env.example  Dockerfile  README.md  composer.json
dashboard/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  index.html  package-lock.json  package.json
docs/: README.md  ai-service.md  api-key-rotation.md  architecture.md  auth-service.md  changelog.md  dashboard.md  export.md  faq.md  gateway.md  generate-test-data.md  getting-started.md  glossary.md  helm.md  index.md  kubernetes.md  load-testing.md  local-dev-setup.md  multi-tenancy.md  observability.md  organizations-and-teams.md  production-deployment.md  qa-day98.md  qa-pass.md  rate-limiting.md  redis.md  registry.md  sdk-go.md  sdk-nodejs.md  sdk-php.md  sdk-python.md  sdks.md  security.md  sms-service.md  templates.md  testing.md  troubleshooting.md  upgrading.md  websocket.md  worker.md
gateway/: .dockerignore  .env.example  Dockerfile  README.md  go.mod  go.sum
scripts/: dev-up.sh  setup.sh
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/examples/: send_and_list.py
sdks/python/smspit/: __init__.py  client.py
sdks/python/tests/: test_client.py
sms-service/: .env.example  Dockerfile  README.md  package-lock.json  package.json
worker/: .env.example  Dockerfile  (+3 more)
(+297 files in other folders)
